--- a/DICOMViewApp/MainWindow.axaml
+++ b/DICOMViewApp/MainWindow.axaml
@@ -3,9 +3,11 @@
         xmlns:d="http://schemas.microsoft.com/expression/blend/2008"
         xmlns:mc="http://schemas.openxmlformats.org/markup-compatibility/2006"
         mc:Ignorable="d" d:DesignWidth="800" d:DesignHeight="450"
+		xmlns:uc="clr-namespace:DICOMViewApp"
         x:Class="DICOMViewApp.MainWindow"
         Title="DICOMViewApp">
 	<Grid>
 		<Image x:Name="iimg"></Image>
+		<uc:UcSingleView></uc:UcSingleView>
 	</Grid>
 </Window>
