--- a/DICOMViewApp/UserControls/DICOMView/UcSingleView.axaml
+++ b/DICOMViewApp/UserControls/DICOMView/UcSingleView.axaml
@@ -2,12 +2,23 @@
              xmlns:x="http://schemas.microsoft.com/winfx/2006/xaml"
              xmlns:d="http://schemas.microsoft.com/expression/blend/2008"
              xmlns:mc="http://schemas.openxmlformats.org/markup-compatibility/2006"
-			 xmlns:uc="clr-namespace:DICOMViewApp"
              mc:Ignorable="d" d:DesignWidth="800" d:DesignHeight="450"
-             x:Class="DICOMViewApp.UcSingleView">
-
+			 xmlns:uc="clr-namespace:DICOMViewApp.UserControls.DICOMView"
+			 xmlns:ucModel="clr-namespace:DICOMViewApp.UserControls.DICOMView.ViewModels"
+			 x:DataType="ucModel:UcSingleViewModel"
+             x:Class="DICOMViewApp.UserControls.DICOMView.UcSingleView">
 	<Grid Background="Black">
-		<Image Source="avares://DICOMViewApp/Assets/Images/DICOMTest.jpg"></Image>
+		<ContentControl x:Name="imgParent" Background="Black">
+			<Image x:Name="img" Source="avares://DICOMViewApp/Assets/Images/DICOMTest.jpg" >
+				<Image.RenderTransform>
+					<TransformGroup>
+						<RotateTransform Angle="20"></RotateTransform>
+						<ScaleTransform ScaleX="0.5" ScaleY="0.5"></ScaleTransform>
+						<TranslateTransform X="{Binding XX}" Y="{Binding YY}"></TranslateTransform>
+					</TransformGroup>
+				</Image.RenderTransform>
+			</Image>
+		</ContentControl>
 		<uc:UcTagView></uc:UcTagView>
 	</Grid>
 </UserControl>
