--- a/ControlPanel/App.axaml
+++ b/ControlPanel/App.axaml
@@ -1,10 +1,13 @@
 <Application xmlns="https://github.com/avaloniaui"
              xmlns:x="http://schemas.microsoft.com/winfx/2006/xaml"
              x:Class="ControlPanel.App"
-             RequestedThemeVariant="Default">
+			 xmlns:sty="using:FluentAvalonia.Styling"
+             RequestedThemeVariant="Dark">
              <!-- "Default" ThemeVariant follows system theme variant. "Dark" or "Light" are other available options. -->
   
     <Application.Styles>
-        <FluentTheme />
+		<sty:FluentAvaloniaTheme />
+		<StyleInclude Source="avares://ControlPanel/Styling/ControlsGalleryStyles.axaml" />
+        <!--<FluentTheme  />-->
     </Application.Styles>
 </Application>
