--- a/ControlPanel/Views/MainWindow.axaml
+++ b/ControlPanel/Views/MainWindow.axaml
@@ -6,6 +6,7 @@
         xmlns:d="http://schemas.microsoft.com/expression/blend/2008"
         xmlns:mc="http://schemas.openxmlformats.org/markup-compatibility/2006"
 		xmlns:local="using:ControlPanel.Views"
+		xmlns:ic="using:FluentIcons.Avalonia.Fluent"
         mc:Ignorable="d" d:DesignWidth="800" d:DesignHeight="450"
         x:Class="ControlPanel.Views.MainWindow"
         x:DataType="vm:MainWindowViewModel"
@@ -19,15 +20,22 @@
 	</Design.DataContext>
 	<DockPanel>
 		<StackPanel DockPanel.Dock="Bottom" Margin="10">
-			<TextBlock>asdf</TextBlock>
+			<local:MainWindowStatusBar></local:MainWindowStatusBar>
 		</StackPanel>
-		<ui:NavigationView  Name="NavView" IsSettingsVisible="False" PaneDisplayMode="Top">
+		<ui:NavigationView  Name="NavView" IsSettingsVisible="False" PaneDisplayMode="Top" Header="asdf">
 			<ui:NavigationView.MenuItems>
-				<ui:NavigationViewItem  x:Name="navHome" Width="130" Classes="SampleAppNav" Content="快捷操作" IconSource="HomeFilled" />
-				<ui:NavigationViewItem  x:Name="navUser" Width="130" Classes="SampleAppNav" Content="用户管理" IconSource="HomeFilled" />
-				<ui:NavigationViewItem  x:Name="navCR1" Width="130" Classes="SampleAppNav" Content="用户管理" IconSource="Star"   />
-				<ui:NavigationViewItem  x:Name="navCR2" Width="130" Classes="SampleAppNav" Content="数据采集" IconSource="Star" />
-				<ui:NavigationViewItem  x:Name="navCR3" Width="130" Classes="SampleAppNav" Content="设备检测" IconSource="Star" />
+				<ui:NavigationViewItem Width="130" Classes="SampleAppNav" Content="菜单" IconSource="{ic:SymbolIconSource Symbol= Settings}" SelectsOnInvoked="False" >
+					<ui:NavigationViewItem.MenuItems>
+						<ui:NavigationViewItem Content="Mail" IconSource="Mail" Tag="SamplePage3" SelectsOnInvoked="False" />
+						<ui:NavigationViewItem Content="Calendar" IconSource="Calendar" Tag="SamplePage4" SelectsOnInvoked="False" />
+					</ui:NavigationViewItem.MenuItems>
+				</ui:NavigationViewItem>
+				<ui:NavigationViewItem  x:Name="navHome" Width="130" Classes="SampleAppNav" Content="快捷操作" IconSource="{ic:SymbolIconSource Symbol= AppFolder}" />
+				<ui:NavigationViewItem  x:Name="navUser" Width="130" Classes="SampleAppNav" Content="用户管理" IconSource="{ic:SymbolIconSource Symbol= People}" IsSelected="True"   />
+				<ui:NavigationViewItem  x:Name="navCR1" Width="130" Classes="SampleAppNav" Content="用户管理"  IconSource="{ic:SymbolIconSource Symbol= Patient}" />
+				<ui:NavigationViewItem  x:Name="navCR2" Width="130" Classes="SampleAppNav" Content="数据采集"  IconSource="{ic:SymbolIconSource Symbol= DocumentCatchUp}" />
+				<ui:NavigationViewItem  x:Name="navCR3" Width="130" Classes="SampleAppNav" Content="数据重建"  IconSource="{ic:SymbolIconSource Symbol= DocumentEdit}" />
+				<ui:NavigationViewItem  x:Name="navCR4" Width="130" Classes="SampleAppNav" Content="设备检测"  IconSource="{ic:SymbolIconSource Symbol= WrenchScrewdriver}" />
 			</ui:NavigationView.MenuItems>
 			<TabControl x:Name="tabControl">
 				<TabControl.Items>
